--- a/.github/workflows/streamlit-app.yml
+++ b/.github/workflows/streamlit-app.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Deploy Streamlit app
         uses: streamlit/deploy@v1
         with:
-          script: Code-Generation-Dolphin/app.py
+          script: app.py
           port: 8501
