--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit
 requests
+llama_cpp
 # Update the package version to be compatible with Python 3.5+
 package_name>=1.0; python_version<'3.5'
